@@ -1,13 +1,0 @@
-Checksums:
-	- Add CoreIO support.
-
-Sockets:
-	- Test applications.
-
-Documentation:
-	- Any undocumented functions, classes, etc.
-
-IO:
-	- BinaryReader
-	- BinaryWriter
-
