@@ -16,6 +16,7 @@ VERSION 0.7.0 (r???)
 	* SplayTree can't handle duplicate keys properly, so 1:1 compatibility with AVLTree/RedBlackTree has been broken to disable certain duplicate key handling functions.
 	* CPUID updated with December 2007 Intel CPUID specification.
 	* Rare bug in AVLTree corrected.
+	* Renamed TextReader and TextWriter to FileReader and FileWriter, respectively.
 
 VERSION 0.6.6 (r593)
 	* Visual Studio 2008 support added.
